--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary_dark">#053742</color>
-    <color name="status_bar_color">#053742</color>
+    <color name="primary_dark">#2E4053</color>
+    <color name="status_bar_color">#2E4053</color>
 </resources>
